Fix bug when radio buttons were not visible

--- a/frontend/src/pages/signup/Signup.css
+++ b/frontend/src/pages/signup/Signup.css
@@ -50,6 +50,16 @@
   width: 735px;
 }
 
+.radio-group {
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.radio-group input {
+  margin: 0 5px 0 0;
+}
+
 .row-wrap {
   display: flex;
   justify-content: space-between;
@@ -59,7 +69,6 @@
 .row-wrap .input-group {
   width: 125px;
 }
-
 
 .redirect {
   margin: 10px;
